--- a/web-design/index.html
+++ b/web-design/index.html
@@ -199,11 +199,16 @@
           <ul>
             <li data-flip-title="Red">
               <picture>
-                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/ai-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/ai-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/ai-wide-746x520.png" data-src="images/gallery-img/ai-wide-746x520.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/robotics/">
@@ -212,10 +217,14 @@
             </li>
             <li data-flip-title="Razzmatazz" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/dog-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/dog-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
                 <img src="images/gallery-img/dog-wide.png" data-src="images/gallery-img/dog-wide.png" loading="lazy">
               </picture>
               <div class="content">
@@ -226,11 +235,16 @@
             </li>
             <li data-flip-title="Deep Lilac" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/fitness-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/fitness-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/fitness-wide.png" data-src="images/gallery-img/fitness-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/fitness/">
@@ -239,11 +253,16 @@
             </li>
             <li data-flip-title="Daisy Bush" data-flip-category="Purples">
               <picture>
-                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/kungfu-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/kungfu-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/kungfu-wide.png" data-src="images/gallery-img/kungfu-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://kaizenkungfu.co.za/">
@@ -252,10 +271,14 @@
             </li>
             <li data-flip-title="Cerulean Blue" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)" width="502px" height="350px">
+                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/panda-2-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/panda-2-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
                 <img src="images/gallery-img/panda-wide-746x5202.png"
                   data-src="images/gallery-img/panda-wide-746x5202.png" loading="lazy">
               </picture>
@@ -266,11 +289,16 @@
             </li>
             <li data-flip-title="Dodger Blue" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/rosa-wide-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/rosa-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/rosa-wide-746x520.png" data-src="images/gallery-img/rosa-wide-746x520.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/rosa/">
@@ -279,12 +307,17 @@
             </li>
             <li data-flip-title="Cyan" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/music-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/music-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)" width="502px" heigh width="358px" height="250px"t="350px">
+                <source srcset="images/gallery-img/w350/music-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/music-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/music-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/music-500.png" media="(max-height: 700px)" width="502px" heigh
+                  width="358px" height="250px" t="350px">
                 <source srcset="images/gallery-img/text7.gif" media="(max-height: 450px)" width="358px" height="250px">
-                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png" loading="lazy">
+                <img src="images/gallery-img/music-wide.png" data-src="images/gallery-img/music-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/music/">
@@ -293,11 +326,16 @@
             </li>
             <li data-flip-title="Robin's Egg" data-flip-category="Blues">
               <picture>
-                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/marvel-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/marvel-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/marvel-wide.png" data-src="images/gallery-img/marvel-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://i-love-you-marvel-avenger-3000.github.io/">
@@ -306,11 +344,16 @@
             </li>
             <li data-flip-title="Deep Sea" data-flip-category="Greens">
               <picture>
-                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/photo-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/photo-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/photo-wide.png" data-src="images/gallery-img/photo-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/photo-portfolio/">
@@ -319,11 +362,16 @@
             </li>
             <li data-flip-title="Apple" data-flip-category="Greens">
               <picture>
-                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-width: 576px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)" width="358px" height="250px">
-                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)" width="502px" height="350px">
-                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)" width="502px" height="350px">
-                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png" loading="lazy">
+                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-width: 576px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w350/restaurant-350.png" media="(max-height: 450px)" width="358px"
+                  height="250px">
+                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-width: 991px)" width="502px"
+                  height="350px">
+                <source srcset="images/gallery-img/w500/restaurant-500.png" media="(max-height: 700px)" width="502px"
+                  height="350px">
+                <img src="images/gallery-img/restaurant-wide.png" data-src="images/gallery-img/restaurant-wide.png"
+                  loading="lazy">
               </picture>
               <div class="content">
                 <a href="https://portfolioprime.github.io/restaurant/">
@@ -357,18 +405,45 @@
         <!-- <h1>Drop me a line to<br>discuss your website project</h1> -->
 
         <!-- GET FORM ENDPOINT with my custom form code -->
-        <!-- <form action="https://getform.io/f/3b2f44af-d8ea-4a19-9191-3c38975b2ab6" method="POST">
-          <input type="text" placeholder="Enter Name" name="name">
-          <input type="email" placeholder="Enter Email" name="email">
+        <form action="https://getform.io/f/3b2f44af-d8ea-4a19-9191-3c38975b2ab6" method="POST">
+
+          <div class="fieldset">
+            <label for="name" id="name-label">Name *</label>
+            <input type="text" placeholder="Enter Name" name="name">
+          </div>
+
+          <div class="fieldset">
+            <label for="email" id="email-label">Email *</label>
+            <input type="email" placeholder="Enter Email" name="email">
+          </div>
+
+          <div class="fieldset">
+            <label for="tel" id="tel-label">Tel *</label>
+            <input type="tel" id="tel" name="tel" placeholder="Enter Telephone number">
+          </div>
+
+          <div class="fieldset">
+            <label for="dropdown" id="dropdown-label">Which service are you interested in?</label>
+            <select name="fluency" id="dropdown" class="form-control">
+              <option value="" selected disabled>Select an option</option>
+              <option value="web-design">Web design</option>
+              <option value="advertising">Facebook or Google Advertising</option>
+              <option value="content-writing">Content Writing</option>
+              <option value="social-media">Organic Social Media Marketing</option>
+            </select>
+          </div>
+
+          <p>What is your inquiry?</p>
           <textarea name="message" id="message" placeholder="How can we help you?" name="message"></textarea>
+
           <div class="btn-box">
             <button class="common-btn">Submit Message</button>
           </div>
-        </form> -->
+        </form>
         <!-- END GET FORM ENDPOINT with my custom form code -->
 
         <!-- BITRIX24 Form defer to prevent render-blocking -->
-        <script id="bx24_form_inline" data-skip-moving="true">
+        <!-- <script id="bx24_form_inline" data-skip-moving="true">
           (function (w, d, u, b) {
             w['Bitrix24FormObject'] = b; w[b] = w[b] || function () {
               arguments[0].ref = u;
@@ -380,7 +455,7 @@
           })(window, document, 'https://b24-f0onpn.bitrix24.com/bitrix/js/crm/form_loader.js', 'b24form');
 
           b24form({ "id": "6", "lang": "en", "sec": "wk76xf", "type": "inline" });
-        </script>
+        </script> -->
         <!-- End BITRIX24 Form -->
 
       </div>
@@ -560,7 +635,7 @@
       opacity: 0,
     });
 
-    ScrollReveal().reveal('.logo, #bx_form_iframe_6', {
+    ScrollReveal().reveal('.logo, .contact-left-col form, #bx_form_iframe_6', {
       delay: 0,
       duration: 500,
       easing: 'ease-out',
