--- a/web-design/index.html
+++ b/web-design/index.html
@@ -49,19 +49,22 @@
   <nav id="sideNav">
     <ul>
       <li>
-        <a href="#top">HOME</a>
+        <a href="index.html#top">HOME</a>
       </li>
       <li>
-        <a href="#services">SERVICES</a>
+        <a href="index.html#services">SERVICES</a>
       </li>
       <li>
-        <a href="#features">FEATURES</a>
+        <a href="web-design.html">WEB DESIGN PACKAGES</a>
       </li>
       <li>
-        <a href="#portfolio">RECENT WORK</a>
+        <a href="index.html#features">FEATURES</a>
       </li>
       <li>
-        <a href="#contact">CONTACT</a>
+        <a href="index.html#portfolio">RECENT WORK</a>
+      </li>
+      <li>
+        <a href="index.html#contact">CONTACT</a>
       </li>
     </ul>
   </nav>
@@ -119,6 +122,7 @@
           <p>We create web sites from the ground up including:</p>
           <p> Personal Blogs, Photography Portfolios, App Landing Pages, Marketing Sites, eCommerce Stores and Business
             Websites.</p>
+          <a href="web-design.html"><button class="common-btn">View Design Packages</button></a>
         </div>
       </div>
       <div class="col">
@@ -409,22 +413,22 @@
 
           <div class="fieldset">
             <label for="name" id="name-label">Name *</label>
-            <input type="text" placeholder="Enter Name" name="name">
+            <input type="text" placeholder="Enter Name" name="name" required>
           </div>
 
           <div class="fieldset">
             <label for="email" id="email-label">Email *</label>
-            <input type="email" placeholder="Enter Email" name="email">
+            <input type="email" placeholder="Enter Email" name="email" required>
           </div>
 
           <div class="fieldset">
-            <label for="tel" id="tel-label">Tel *</label>
+            <label for="tel" id="tel-label">Tel</label>
             <input type="tel" id="tel" name="tel" placeholder="Enter Telephone number">
           </div>
 
           <div class="fieldset">
-            <label for="dropdown" id="dropdown-label">Which service are you interested in?</label>
-            <select name="service" id="dropdown" class="form-control">
+            <label for="dropdown" id="dropdown-label">Which service are you interested in? *</label>
+            <select name="service" id="dropdown" class="form-control" required>
               <option value="" selected disabled>Select an option</option>
               <option value="web-design">Web design</option>
               <option value="advertising">Facebook or Google Advertising</option>
@@ -478,25 +482,31 @@
       <div class="footer-left-col">
         <div class="footer-links">
           <div class="link-title">
-            <h4>Product</h4>
+            <!-- <h4>Product</h4>
             <small>Our Plan</small><br>
-            <small>Free Trial</small>
+            <small>Free Trial</small> -->
+            <h4>Web design</h4>
+            <a href="web-design.html#starter"><small>Starter</small><br></a>
+            <a href="web-design.html#business"><small>Business</small><br></a>
+            <a href="web-design.html#ecommerce"><small>eCommerce</small></a>
+          </div>
+          <!-- <div class="link-title">
+            <h4>Marketing</h4>
+            <small>Social Marketing</small><br>
+            <small>Paid Advertising</small><br>
+            <small>SEO</small>
           </div>
           <div class="link-title">
-            <h4>About Us</h4>
-            <small>Request Demo</small><br>
-            <small>FAQs</small>
+            <h4>Content Writing</h4>
+            <small>SEO</small><br>
+            <small>Product Reviews</small><br>
+            <small>Value Articles</small>
           </div>
           <div class="link-title">
-            <h4>Support</h4>
-            <small>Features</small><br>
+            <h4>Get Started</h4>
+            <small>Request a Consult</small><br>
             <small>Contact Us</small>
-          </div>
-          <div class="link-title">
-            <h4>Explore</h4>
-            <small>Find a non-profit</small><br>
-            <small>Corporate Solution</small>
-          </div>
+          </div> -->
         </div>
       </div>
       <div class="footer-right-col">
