--- a/Lookbook Fashion Grid/index.html
+++ b/Lookbook Fashion Grid/index.html
@@ -147,6 +147,7 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
 
       </section>
 
