--- a/Clean Juice Landing page/index.html
+++ b/Clean Juice Landing page/index.html
@@ -18,7 +18,7 @@
       <div class="logo">
         <a href="">
           <!-- <h1>Clean Juice</h1> -->
-        <img src="img/white_bg_logo.png" alt="">
+          <img src="img/white_bg_logo.png" alt="">
         </a>
       </div>
       <ul>
@@ -37,7 +37,9 @@
         <a href="">
           <li>own a clean juice</li>
         </a>
-        <a href=""><li>contact us</li></a>
+        <a href="">
+          <li>contact us</li>
+        </a>
       </ul>
       <div class="search">
         <a href=""><i class="fas fa-search"></i></a>
@@ -54,6 +56,7 @@
 
   <main>
 
+    <!-- ORANGE ORANGE ORANGE ORANGE  -->
     <div id="slide-1" class="slide">
 
       <div class="content">
@@ -84,6 +87,7 @@
 
     </div>
 
+    <!--  GREEN  GREEN  GREEN  GREEN  -->
     <div id="slide-2" class="slide">
 
       <div class="content">
@@ -91,7 +95,7 @@
           Find your clean juice
         </div>
         <div class="pages"><span>2</span>/7</div>
-        <div class="title" style="letter-spacing: 40px;">Green</div>
+        <div class="title green">Green</div>
         <div class="cta-btn">
           <a href="#">show all the juices</a>
         </div>
@@ -114,6 +118,7 @@
 
     </div>
 
+    <!-- YELLOW YELLOW YELLOW YELLOW  -->
     <div id="slide-3" class="slide">
 
       <div class="content">
@@ -144,6 +149,7 @@
 
     </div>
 
+    <!-- RED RED RED RED -->
     <div id="slide-4" class="slide">
 
       <div class="content">
@@ -151,7 +157,7 @@
           Find your clean juice
         </div>
         <div class="pages"><span>4</span>/7</div>
-        <div class="title">Red Red</div>
+        <div class="title red">Red</div>
         <div class="cta-btn">
           <a href="#">show all the juices</a>
         </div>
@@ -174,6 +180,7 @@
 
     </div>
 
+    <!-- WHITE WHITE WHITE WHITE  -->
     <div id="slide-5" class="slide">
 
       <div class="content">
@@ -204,6 +211,7 @@
 
     </div>
 
+    <!-- PINK PINK PINK PINK -->
     <div id="slide-6" class="slide">
 
       <div class="content">
@@ -211,7 +219,7 @@
           Find your clean juice
         </div>
         <div class="pages"><span>6</span>/7</div>
-        <div class="title" style="letter-spacing: 50px;">Pi nk</div>
+        <div class="title pink">Pink</div>
         <div class="cta-btn">
           <a href="#">show all the juices</a>
         </div>
@@ -234,6 +242,7 @@
 
     </div>
 
+    <!-- CASHEW CASHEW CASHEW CASHEW  -->
     <div id="slide-7" class="slide">
 
       <div class="content">
