--- a/index.html
+++ b/index.html
@@ -37,23 +37,42 @@
       <!-- Modal Content (The Image) -->
       <div class="modal-content" id="modal01">
         <ol>
-          <li><a href="https://portfolioprime.github.io/rosa/">Classy Animated Restaurant Page</a></li>
+          <li><a href="https://wanodesigns.co.za/">Web Design Service</a></li>
+          <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
           <li><a href="https://orphanlove81.github.io/">ESL Teaching in China Website</a></li>
+          <li><a href="https://moneysaversa.co.za">Moneysaversa - Investment Site</a></li>
+          <li><a href="http://conquestcharters.com">Conquest Marine Tours</a></li>
+          <li><a href="https://portfolioprime.github.io/Lookbook%20Fashion%20Grid/">Lookbook Fashion Grid</a></li>
+          <li><a href="http://34.125.202.55/real_estate/">Real Estate</a></li>
+          <li><a href="http://34.125.202.55/photo_proof_1/">Photo Proofing Site</a></li>
+          <li><a href="http://34.125.202.55/organic/">Organic Food Store</a></li>
+          <li><a href="https://portfolioprime.github.io/ronaldo-stats/">CR7 Christiano Ronaldo Stats</a></li>
+          <li><a href="https://portfolioprime.github.io/Nike Product Card/">Nike Basketball Shoe Product Card</a></li>
+          <li><a href="https://portfolioprime.github.io/Clean%20Juice%20Landing%20page/">Clean Juice</a></li>
+          <li><a href="https://portfolioprime.github.io/rosa/">Animated Restaurant Page</a></li>
+          <li><a href="https://portfolioprime.github.io/Nature%20carousel/index-final.html">Animated Travel Carousel</a>
+          <li><a href="http://34.125.202.55/adopt_puppy/">Adopt a puppy</a></li>
+          <li><a href="https://portfolioprime.github.io/FCC%20Tribute%20Page/">FCC Tribute Page</a></li>
+          <li><a href="http://34.125.202.55/photo_1/">Photography Portfolio</a></li>
+          <li><a href="http://34.125.202.55/print/">Print Store</a></li>
+          <li><a href="https://portfolioprime.github.io/Bakers%20Choice/">Baker's Choice Bakery Store</a></li>
+          </li>
+          <li><a href="https://portfolioprime.github.io/Easy%20Tutorials%20Shopping%20Cart/">ET Shopping Cart</a></li>
+          <li><a href="https://portfolioprime.github.io/FCC Survey Form/">FCC Survey Form</a></li>
+          <li><a href="https://portfolioprime.github.io/Italian%20Restaurant/">Italian Restaurant</a></li>
           <li><a href="https://portfolioprime.github.io/robotics/">Artificial Intelligence Robotics Site</a></li>
           <li><a href="https://portfolioprime.github.io/wedding/">Stunning Wedding Website</a></li>
           <li><a href="https://i-love-you-marvel-avenger-3000.github.io/">Marvel Fan Page</a></li>
-          <li><a href="https://kaizenkungfu.co.za">Kaizen Kungfu Training</a></li>
+          <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
           <li><a href="https://portfolioprime.github.io/dogs/">Man's best friend - Adopt a puppy website</a></li>
           <li><a href="https://portfolioprime.github.io/music/">Music Training Workshop Page</a></li>
           <li><a href="https://portfolioprime.github.io/photo-portfolio/">Ace Photography Portfolio</a></li>
           <li><a href="https://portfolioprime.github.io/fitness/">Personal Trainer Website</a></li>
-          <li><a href="https://portfolioprime.github.io/jokes/">Jokes One Page Scroll Site</a></li>
           <li><a href="https://portfolioprime.github.io/purple-flat/">Purple flat design landing page</a></li>
           <li><a href="https://portfolioprime.github.io/restaurant/">Another Restaurant Website</a></li>
           <li><a href="https://portfolioprime.github.io/running-shoe-shop/">Running Shoe Online Store</a></li>
           <li><a href="https://portfolioprime.github.io/stars/">Stars Video Landing Page</a></li>
           <li><a href="https://portfolioprime.github.io/slider/">Coffee Full Page Image Slider</a></li>
-
         </ol>
       </div>
 
@@ -84,7 +103,7 @@
     // When the user clicks on <span> (x), close the modal
     span.onclick = function () {
       modal.style.display = "none";
-    } 
+    }
   </script>
 </body>
 
